<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "Tutorials point"
        android:id = "@+id/textView"
        android:layout_below = "@+id/textview"
        android:layout_centerHorizontal = "true"
        android:textColor = "#ff7aff24"
        android:textSize = "35dp" /-->

    <!--ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/abc"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" /-->

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attempts Left:"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textview"
        android:textSize="25dp"
        android:layout_toRightOf="@+id/textview" /-->
    <ListView
        android:id="@+id/main_passwordsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_exitDirectoryButton"
        android:layout_below="@id/main_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/sections"
        android:scrollbarThumbHorizontal="@color/colorText"
        android:scrollbarThumbVertical="@color/colorText"></ListView>

    <Button
        android:id="@+id/main_logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/manager_Logout"
        android:textSize="@dimen/manager_ButtonTextSize" />

    <Button
        android:id="@+id/main_exitDirectoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_addDirectoryButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/manager_ExitDirectory"
        android:textSize="@dimen/manager_ButtonTextSize" />

    <TextView
        android:id="@+id/main_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/manager_StoredPasswords"
        android:textColor="@color/colorText"
        android:textSize="@dimen/manager_MainLabel"
        android:textStyle="bold" />

    <Button
        android:id="@+id/main_addDirectoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_addPasswordButton"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/manager_AddDirectory"
        android:textSize="@dimen/manager_ButtonTextSize" />

    <Button
        android:id="@+id/main_addPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_logoutButton"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/manager_AddPassword"
        android:textSize="@dimen/manager_ButtonTextSize" />

</RelativeLayout>